--- a/package.json
+++ b/package.json
@@ -8,14 +8,22 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "^7.0.96",
+    "axios": "^1.1.3",
+    "buefy": "^0.9.22",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "node-sass": "^8.0.0",
+    "sass-loader": "^13.2.0",
+    "vue": "^2.6.14",
+    "vue-axios": "^3.5.2",
+    "vue-router": "^3.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-router": "^5.0.8",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
