--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "axios": "^1.1.3",
     "buefy": "^0.9.22",
     "core-js": "^3.8.3",
+    "emoji-vue": "^0.2.4",
     "node-sass": "^8.0.0",
+    "postcss-import": "^15.0.0",
     "sass-loader": "^13.2.0",
     "vue": "^2.6.14",
     "vue-axios": "^3.5.2",
+    "vue-emoji-picker": "^1.0.3",
     "vue-router": "^3.1.6"
   },
   "devDependencies": {
