--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@mdi/font": "^7.0.96",
+    "aws-amplify": "^4.3.43",
+    "aws-amplify-vue": "^2.1.9",
     "axios": "^1.1.3",
     "buefy": "^0.9.22",
     "core-js": "^3.8.3",
@@ -16,6 +18,7 @@
     "node-sass": "^8.0.0",
     "postcss-import": "^15.0.0",
     "sass-loader": "^13.2.0",
+    "vee-validate": "^2.2.15",
     "vue": "^2.6.14",
     "vue-axios": "^3.5.2",
     "vue-emoji-picker": "^1.0.3",
