--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "vue": "^2.6.14",
     "vue-axios": "^3.5.2",
     "vue-emoji-picker": "^1.0.3",
-    "vue-router": "^3.1.6"
+    "vue-router": "^3.1.6",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
