--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "sass-loader": "^13.2.0",
     "vee-validate": "^2.2.15",
     "vue": "^2.6.14",
+    "vue-crontab": "^0.0.4",
     "vue-emoji-picker": "^1.0.3",
     "vue-router": "^3.1.6",
     "vuex": "^3.6.2"
